--- a/app/templates/analysis/screener.html
+++ b/app/templates/analysis/screener.html
@@ -313,6 +313,7 @@
 {% endblock %}
 
 {% block scripts %}
+<script src="{{ url_for('static', filename='js/screener.js') }}"></script>
 <script>
 // Filter display names mapping
 const filterDisplayNames = {
